--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 body {
   width: 430px;
   margin: auto;
-  border: 1px solid #eee;
+  border: 1px solid #fff7ed;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -24,9 +24,7 @@ a {
 
 .active {
   color: #000 !important;
+  text-decoration: underline;
 }
 
-.hostlayout {
-  margin-bottom: 16px;
-  background-color: antiquewhite;
-}
+
