--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  /* border: 1px solid #000; */
 }
 
 body {
@@ -27,4 +29,28 @@ a {
   text-decoration: underline;
 }
 
+i[class*="van-type-"] {
+  padding: 7px 14px;
+  width: fit-content;
+  border-radius: 7px;
+  font-size: 16px;
+  font-weight: 500;
+  color: #fff;
+}
 
+.van-type-simple {
+  background-color: #e17654;
+}
+
+
+.van-type-rugged {
+  background-color: #115e59;
+}
+
+.van-type-luxury {
+  background-color: #161616;
+}
+
+button[disabled] {
+  background-color: gray;
+}
