--- a/src/pages/Vans/VanDetail.module.css
+++ b/src/pages/Vans/VanDetail.module.css
@@ -77,3 +77,8 @@
     margin-bottom: 24px !important;
     margin-top: 40px !important;
 }
+
+.loadding {
+  text-align: center;
+  margin-top: 99px;
+}
